Update: 85/10/5 split, translate annotations to English and simplify code comments; adjust scaling and validation pipeline

--- a/DecisionTree.ipynb
+++ b/DecisionTree.ipynb
@@ -1338,7 +1338,7 @@
         "id": "d69de05e"
       },
       "source": [
-        "## **4. Train-Test Split (Time-based)**\n"
+        "## **4. Train-Validate-Test Split (Time-based)**\n"
       ]
     },
     {
@@ -1368,11 +1368,13 @@
         "X = data.drop(columns=[TARGET])\n",
         "y = data[TARGET]\n",
         "\n",
-        "split = int(len(X)*0.8)\n",
-        "X_train, X_test = X.iloc[:split], X.iloc[split:]\n",
-        "y_train, y_test = y.iloc[:split], y.iloc[split:]\n",
+        "train_end = int(len(X) * 0.85)\n",
+        "val_end = int(len(X) * 0.95)\n",
+        "X_train, X_val, X_test = X.iloc[:train_end], X.iloc[train_end:val_end], X.iloc[val_end:]\n",
+        "y_train, y_val, y_test = y.iloc[:train_end], y.iloc[train_end:val_end], y.iloc[val_end:]\n",
         "\n",
         "print(\"Train shape:\", X_train.shape)\n",
+        "print(\"Validate shape:\", X_val.shape)\n",
         "print(\"Test shape:\", X_test.shape)"
       ]
     },
@@ -1410,6 +1412,7 @@
       "source": [
         "scaler = StandardScaler()\n",
         "X_train_s = scaler.fit_transform(X_train)\n",
+        "X_val_s = scaler.transform(X_val)\n",
         "X_test_s = scaler.transform(X_test)\n",
         "\n",
         "print(\"Scaling completed.\")"
