Docs/Code annotations: translate to English and streamline code comments in annotated notebook

--- a/DecisionTree_85_10_5_Annotated (1).ipynb
+++ b/DecisionTree_85_10_5_Annotated (1).ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/mnt/data/household.csv'\n",
+    "path = 'household.csv'\n",
     "df = pd.read_csv(path, parse_dates=['date'], low_memory=True)\n",
     "df = df.set_index('date').sort_index()\n",
     "\n",
